add details sidenav

--- a/Angular/src/app/layout/navbar/navbar.component.html
+++ b/Angular/src/app/layout/navbar/navbar.component.html
@@ -40,7 +40,7 @@
 		</mat-nav-list>
 	</mat-drawer>
 
-	<div class="content" [ngStyle]="{'margin-left': isExpanded ? '141px' : '50px'}">
+	<div class="content" [ngStyle]="{'padding-left': isExpanded ? '100px' : ''}">
 		<ng-content></ng-content>
 	</div>
 
