--- a/Angular/src/app/pages/claims/details/details.component.scss
+++ b/Angular/src/app/pages/claims/details/details.component.scss
@@ -65,6 +65,12 @@
 				background-color: $secondary-bg-color;
 				padding-bottom: 20px;
 
+				&-content{
+					max-height: 200px;
+					// height: 100%;
+					overflow-y: scroll;
+				}
+
 				.form{
 					display: flex;
 					justify-content: space-between;
