--- a/Angular/src/app/app.component.html
+++ b/Angular/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-navbar>
+<!-- <app-navbar>
 	<router-outlet></router-outlet>
-</app-navbar>
+</app-navbar> -->
+<div style="background-color: #686868">
+  <router-outlet></router-outlet>
+</div>
