--- a/Angular/src/app/pages/account/login/login.component.html
+++ b/Angular/src/app/pages/account/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="h-100 gradient-form" style="background-color: #686868">
+<div class="h-100 gradient-form">
   <div class="row g-0">
     <div class="col-lg-8  gradient-custom-2">
       <div class="container">
