--- a/Angular/src/app/app.component.scss
+++ b/Angular/src/app/app.component.scss
@@ -9,3 +9,4 @@ $bg-icons-color: rgb(53,77,120);
 $icons-active-color: rgb(255,255,255);
 $icons-color: rgb(185, 185, 185);
 $border-radius: 9px;
+$gradient: linear-gradient(to right, #29375B, #21272D);
