--- a/Angular/src/app/pages/account/register/register.component.scss
+++ b/Angular/src/app/pages/account/register/register.component.scss
@@ -25,6 +25,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    align-items: center;
     .title{
       margin-top: 5em;
     }
@@ -32,20 +33,13 @@
       /* center */
       display: flex;
       justify-content: center;
-      // align-items: center;
-      margin: 0 auto;
+      width: 50%;
       .input-container {
         display: flex;
         align-items: center;
         width: 100%;
         margin-bottom: 15px;
         border-bottom: 2px solid #d9d9d9;
-          // .icon{
-          //   padding: 10px;
-          //   min-width: 50px;
-          //   text-align: center;
-
-          // }
           input {
             margin-left: 15px;
             padding: 10px;
