--- a/Angular/src/app/pages/account/register/register.component.html
+++ b/Angular/src/app/pages/account/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="h-100 gradient-form">
-  <div class="row g-0">
+  <div class="row g-0 page">
     <div class="col-lg-4 text-start mt-3 px-3"  style="background-color: #686868">
       <img src="../../assets/logo.png" alt="" style="width: 20%;">
     </div>
