--- a/Angular/src/app/pages/account/login/login.component.scss
+++ b/Angular/src/app/pages/account/login/login.component.scss
@@ -14,6 +14,9 @@
     display: flex;
     justify-content: space-between;
   }
+  .page{
+    background-color: #686868;
+  }
   .container{
     width: 100%;
     display: flex;
