--- a/Angular/src/app/pages/account/register/register.component.scss
+++ b/Angular/src/app/pages/account/register/register.component.scss
@@ -28,8 +28,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
-
+    height: 100%;
     .title{
       margin-top: 5em;
     }
@@ -44,7 +43,7 @@
         width: 100%;
         margin-bottom: 15px;
         border-bottom: 2px solid #d9d9d9;
-          input {
+          .input {
             margin-left: 15px;
             padding: 10px;
             width: 100%;
