--- a/Angular/src/app/pages/claims/details/details.component.html
+++ b/Angular/src/app/pages/claims/details/details.component.html
@@ -93,7 +93,7 @@
 									<div mat-card-avatar class="mat-card-header-image"
 										[style]="{'background-image': 'url(https://material.angular.io/assets/img/examples/shiba1.jpg)'}">
 									</div>
-									<mat-card-title>Transaction {{index+1}}</mat-card-title>
+									<mat-card-title>Transaction {{claim._status.length - index}}</mat-card-title>
 									<mat-card-subtitle>Created: {{item.date | date:'short'}}</mat-card-subtitle>
 								</mat-card-header>
 								<mat-card-content>
