[angular] update src

--- a/Angular/src/app/pages/account/register/register.component.html
+++ b/Angular/src/app/pages/account/register/register.component.html
@@ -1,7 +1,7 @@
 <div class="h-100 gradient-form">
   <div class="row g-0 page">
     <div class="col-lg-4 text-start mt-3 px-3"  style="background-color: #686868">
-      <img src="../../assets/logo.png" alt="" style="width: 20%;">
+      <img src="./assets/logo.png" alt="" style="width: 20%;">
     </div>
     <div class="col-lg-8  gradient-custom-2">
       <div class="container">
@@ -105,10 +105,10 @@
               <p class="small pt-3">or continue with</p>
               <div class="row">
                 <div class="col-6">
-                  <img src="../../assets/img/facebook.png" alt="facebook" style="width: 40px;">
+                  <img src="./assets/img/Facebook_Logo_(2019).png.webp" alt="facebook" style="width: 40px;">
                 </div>
                 <div class="col-6">
-                  <img src="../../assets/img/google.jpg" alt="google" style="width: 40px;">
+                  <img src="./assets/img/Google__G__Logo.svg.webp" alt="google" style="width: 40px;">
                 </div>
               </div>
               <div class="register mt-5">
