--- a/Angular/src/app/pages/account/auth/auth.component.html
+++ b/Angular/src/app/pages/account/auth/auth.component.html
@@ -1,7 +1,6 @@
 <div class="h-100 gradient-form">
-	<div id="tosh" class=" col-lg-8 toshow" [ngClass]="
-	showRegister ? 'toshow-right':'toshow-left'
-	">
+	<div id="tosh" class=" col-lg-8 toshow"
+      [ngClass]="showRegister ? 'toshow-right' : 'toshow-left'">
 		<div class="register" *ngIf="showRegister">
 			<div class="  gradient-custom-2">
 				<div class="container">
@@ -49,8 +48,12 @@
 									<input class="input" matInput [type]="hideRegister ? 'password' : 'text'"
 										placeholder="Enter your password" formControlName="passwordRegister"
 										[formControl]="passwordRegister" required>
-									<button mat-icon-button matSuffix (click)="hideRegister = !hideRegister"
-										[attr.aria-label]="'Hide passwordRegister'" [attr.aria-pressed]="hideRegister">
+									<button
+                      mat-icon-button
+                      matSuffix
+                      (click)="hideRegister = !hideRegister"
+										  [attr.aria-label]="'Hide passwordRegister'"
+                      [attr.aria-pressed]="hideRegister">
 										<mat-icon>{{hideRegister ? 'visibility_off' : 'visibility'}}</mat-icon>
 									</button>
 								</div>
@@ -134,8 +137,11 @@
 									<input matInput [type]="hide ? 'password' : 'text'"
 										placeholder="Enter your password" [formControl]="password"
 										formControlName="password" required>
-									<button mat-icon-button matSuffix (click)="hide = !hide"
-										[attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+									<button mat-icon-button
+                          matSuffix
+                          (click)="hide = !hide"
+										      [attr.aria-label]="'Hide password'"
+                          [attr.aria-pressed]="hide">
 										<mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
 									</button>
 								</div>
@@ -177,11 +183,11 @@
 
 	</div>
 	<div class="row" id="other-part">
-		<div class="col-lg-5 text-start pt-3 px-3 h-100" style="background-color: #686868">
+		<div class="col-lg-5 text-start pt-3 px-3 h-100" style="background-color: #686868" >
 			<img *ngIf="ShowRegister" src="./assets/logo.png" alt="" style="width: 20%;">
 		</div>
 		<div class="col-lg-2"></div>
-		<div  class="col-lg-5 text-end pt-3 px-4 h-100" style="background-color: #686868">
+		<div  class="col-lg-5 text-end pt-3 px-4 h-100" style="background-color: #686868 ">
 			<img *ngIf="showLoginF" src="./assets/logo.png" alt="" style="width: 20%;">
 		</div>
 	</div>
