--- a/Angular/src/app/pages/account/auth/auth.component.html
+++ b/Angular/src/app/pages/account/auth/auth.component.html
@@ -102,8 +102,8 @@
 											style="width: 40px;">
 									</div>
 								</div>
-								<div class="register mt-5">
-									<p>You don't have an account ? <a (click)="showLogin()">login here !</a>
+								<div class="register-btn mt-5">
+									<p>You don't have an account ? <button (click)="showLogin()">login here !</button>
 									</p>
 								</div>
 							</div>
@@ -120,6 +120,9 @@
 					</div>
 					<div class="card-body">
 						<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+              <div class="text-center" >
+                <mat-error *ngIf="unauthenticated">Invalid username or password</mat-error>
+              </div>
 							<div class="form-outline mb-4">
 								<label class="form-label">Email</label>
 								<div class="input-container">
@@ -156,8 +159,7 @@
 									<a class="text-muted" href="#!">Forgot password?</a>
 								</div>
 							</div>
-							<button class="btn btn-primary" style="width:100% ;border-radius: 15px;" type="submit">Log
-								in</button>
+							<button class="btn btn-primary" style="width:100% ;border-radius: 15px;" type="submit">Log in</button>
 							<div class="text-center">
 								<!-- p or continue with -->
 								<p class="small pt-3">or continue with</p>
@@ -171,8 +173,8 @@
 											style="width: 40px;">
 									</div>
 								</div>
-								<div class="register mt-5">
-									<p>You don't have an account ? <a (click)="ShowRegister()">Register here !</a></p>
+								<div class="register-btn mt-5">
+									<p>You don't have an account ? <button (click)="ShowRegister()">Register here !</button></p>
 								</div>
 							</div>
 						</form>
@@ -183,11 +185,11 @@
 
 	</div>
 	<div class="row" id="other-part">
-		<div class="col-lg-5 text-start pt-3 px-3 h-100" style="background-color: #686868" >
+		<div class="col-lg-5 text-start pt-3 px-3 h-100">
 			<img *ngIf="ShowRegister" src="./assets/logo.png" alt="" style="width: 20%;">
 		</div>
 		<div class="col-lg-2"></div>
-		<div  class="col-lg-5 text-end pt-3 px-4 h-100" style="background-color: #686868 ">
+		<div  class="col-lg-5 text-end pt-3 px-4 h-100">
 			<img *ngIf="showLoginF" src="./assets/logo.png" alt="" style="width: 20%;">
 		</div>
 	</div>
