--- a/Angular/src/app/pages/account/auth/auth.component.html
+++ b/Angular/src/app/pages/account/auth/auth.component.html
@@ -88,16 +88,16 @@
 								</mat-error>
 							</div>
 							<div class="forgotPass">
-								<div class="form-group form-check">
-									<input type="checkbox" class="form-check-input" id="exampleCheck1">
-									<label class="form-check-label" for="exampleCheck1">Check me out</label>
-								</div>
 								<div class=" pt-1 mb-5 pb-1">
 									<a class="text-muted" href="#!">Forgot password?</a>
 								</div>
 							</div>
-							<button class="btn btn-primary" style="width:100% ;border-radius: 15px;" type="submit">Log
-								in</button>
+							<button class="btn btn-primary" style="width:100% ;border-radius: 15px;display:flex;justify-content: center;" type="submit" [disabled]="registerLoading">
+								<div *ngIf="!registerLoading" >
+									Register	
+								</div>
+								<mat-spinner diameter="25" class="" *ngIf="registerLoading" ></mat-spinner>
+							</button>
 							<div class="text-center">
 								<!-- p or continue with -->
 								<p class="small pt-3">or continue with</p>
@@ -130,7 +130,8 @@
 					<div class="card-body">
 						<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
               <div class="text-center" >
-                <mat-error *ngIf="unauthenticated">Invalid username or password</mat-error>
+                <!-- <mat-error *ngIf="unauthenticated">Invalid username or password</mat-error> -->
+				<!-- <mat-error *ngIf="loginError">{{loginError}}</mat-error> -->
               </div>
 							<div class="form-outline mb-4">
 								<label class="form-label">Email</label>
@@ -168,7 +169,12 @@
 									<a class="text-muted" href="#!">Forgot password?</a>
 								</div>
 							</div>
-							<button class="btn btn-primary" style="width:100% ;border-radius: 15px;" type="submit">Log in</button>
+							<button class="btn btn-primary" style="width:100% ;border-radius: 15px;display:flex;justify-content: center;" type="submit">
+								<div *ngIf="!loginLoading" >
+									Login
+								</div>
+								<mat-spinner diameter="25" class="" *ngIf="loginLoading" ></mat-spinner>
+							</button>
 							<div class="text-center">
 								<!-- p or continue with -->
 								<p class="small pt-3">or continue with</p>
