change color of input to white

--- a/Angular/src/app/pages/account/verify-email/verify-email.component.scss
+++ b/Angular/src/app/pages/account/verify-email/verify-email.component.scss
@@ -1,6 +1,7 @@
 @import "../../../app.component.scss";
 .background{
 	background: $gradient;
+	color: white!important;
 	text-align: center;
 }
 .back{
