--- a/Angular/src/styles.css
+++ b/Angular/src/styles.css
@@ -18,6 +18,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 	color: rgb(53,77,120)!important;
 	border-radius: 9px 9px 0 0;
 }
-.mat-tab-label {
+.mat-tab-label,.mat-form-field-label {
 	color: white;
 }
