--- a/Angular/src/app/pages/account/auth/auth.component.html
+++ b/Angular/src/app/pages/account/auth/auth.component.html
@@ -1,6 +1,5 @@
 <div class="h-100 gradient-form">
-	<div id="tosh" class=" col-lg-8 toshow"
-      [ngClass]="showRegister ? 'toshow-right' : 'toshow-left'">
+	<div id="tosh" class=" col-lg-8 toshow" [ngClass]="showRegister ? 'toshow-right' : 'toshow-left'">
 		<div class="register" *ngIf="showRegister">
 			<div class="  gradient-custom-2">
 				<div class="container">
@@ -57,12 +56,8 @@
 									<input class="input" matInput [type]="hideRegister ? 'password' : 'text'"
 										placeholder="Enter your password" formControlName="passwordRegister"
 										[formControl]="passwordRegister" required name="password">
-									<button
-                      mat-icon-button
-                      matSuffix
-                      (click)="hideRegister = !hideRegister"
-										  [attr.aria-label]="'Hide passwordRegister'"
-                      [attr.aria-pressed]="hideRegister">
+									<button mat-icon-button matSuffix (click)="hideRegister = !hideRegister"
+										[attr.aria-label]="'Hide passwordRegister'" [attr.aria-pressed]="hideRegister">
 										<mat-icon>{{hideRegister ? 'visibility_off' : 'visibility'}}</mat-icon>
 									</button>
 								</div>
@@ -87,16 +82,18 @@
 									{{getConfirmPasswordRegisterErrorMessage()}}
 								</mat-error>
 							</div>
-							<div class="forgotPass">
+							<!-- <div class="forgotPass">
 								<div class=" pt-1 mb-5 pb-1">
 									<a class="text-muted" href="#!">Forgot password?</a>
 								</div>
-							</div>
-							<button class="btn btn-primary" style="width:100% ;border-radius: 15px;display:flex;justify-content: center;" type="submit" [disabled]="registerLoading">
-								<div *ngIf="!registerLoading" >
-									Register	
+							</div> -->
+							<button class="btn btn-primary"
+								style="width:100% ;border-radius: 15px;display:flex;justify-content: center;"
+								type="submit" [disabled]="registerLoading">
+								<div *ngIf="!registerLoading">
+									Register
 								</div>
-								<mat-spinner diameter="25" class="" *ngIf="registerLoading" ></mat-spinner>
+								<mat-spinner diameter="25" class="" *ngIf="registerLoading"></mat-spinner>
 							</button>
 							<div class="text-center">
 								<!-- p or continue with -->
@@ -129,10 +126,10 @@
 					</div>
 					<div class="card-body">
 						<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-              <div class="text-center" >
-                <!-- <mat-error *ngIf="unauthenticated">Invalid username or password</mat-error> -->
-				<!-- <mat-error *ngIf="loginError">{{loginError}}</mat-error> -->
-              </div>
+							<div class="text-center">
+								<!-- <mat-error *ngIf="unauthenticated">Invalid username or password</mat-error> -->
+								<!-- <mat-error *ngIf="loginError">{{loginError}}</mat-error> -->
+							</div>
 							<div class="form-outline mb-4">
 								<label class="form-label">Email</label>
 								<div class="input-container">
@@ -150,11 +147,8 @@
 									<input matInput [type]="hide ? 'password' : 'text'"
 										placeholder="Enter your password" [formControl]="password"
 										formControlName="password" required name="password">
-									<button mat-icon-button
-                          matSuffix
-                          (click)="hide = !hide"
-										      [attr.aria-label]="'Hide password'"
-                          [attr.aria-pressed]="hide">
+									<button mat-icon-button matSuffix (click)="hide = !hide"
+										[attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
 										<mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
 									</button>
 								</div>
@@ -169,11 +163,13 @@
 									<a class="text-muted" href="#!">Forgot password?</a>
 								</div>
 							</div>
-							<button class="btn btn-primary" style="width:100% ;border-radius: 15px;display:flex;justify-content: center;" type="submit">
-								<div *ngIf="!loginLoading" >
+							<button class="btn btn-primary"
+								style="width:100% ;border-radius: 15px;display:flex;justify-content: center;"
+								type="submit">
+								<div *ngIf="!loginLoading">
 									Login
 								</div>
-								<mat-spinner diameter="25" class="" *ngIf="loginLoading" ></mat-spinner>
+								<mat-spinner diameter="25" class="" *ngIf="loginLoading"></mat-spinner>
 							</button>
 							<div class="text-center">
 								<!-- p or continue with -->
@@ -189,7 +185,8 @@
 									</div>
 								</div>
 								<div class="register-btn mt-5">
-									<p>You don't have an account ? <button (click)="ShowRegister()">Register here !</button></p>
+									<p>You don't have an account ? <button (click)="ShowRegister()">Register here
+											!</button></p>
 								</div>
 							</div>
 						</form>
@@ -204,7 +201,7 @@
 			<img *ngIf="ShowRegister" src="./assets/logo.png" alt="" style="width: 20%;">
 		</div>
 		<div class="col-lg-2"></div>
-		<div  class="col-lg-5 text-end pt-3 px-4 h-100">
+		<div class="col-lg-5 text-end pt-3 px-4 h-100">
 			<img *ngIf="showLoginF" src="./assets/logo.png" alt="" style="width: 20%;">
 		</div>
 	</div>
