fetch auth user and show it

--- a/Angular/src/app/pages/claims/claims.component.html
+++ b/Angular/src/app/pages/claims/claims.component.html
@@ -13,7 +13,7 @@
         <div class="actions">
           <img class="avatar"
             src="https://resize.elle.fr/article/var/plain_site/storage/images/loisirs/cinema/news/avatar-2-une-premiere-bande-annonce-en-mai-4010741/96462268-1-fre-FR/Avatar-2-une-premiere-bande-annonce-en-mai.jpg" />
-          <div class="hello">Hello, <span class="name">Foulen</span></div>
+          <div class="hello">Hello, <span class="name">{{authUser?.userName?.split(' ')?.at(0)}}</span></div>
           <mat-icon class="more-icon">arrow_drop_down</mat-icon>
         </div>
 
