--- a/Angular/src/app/pages/account/auth/auth.component.html
+++ b/Angular/src/app/pages/account/auth/auth.component.html
@@ -160,7 +160,7 @@
 									<label class="form-check-label" for="exampleCheck1">Check me out</label>
 								</div>
 								<div class=" pt-1 mb-5 pb-1">
-									<a class="text-muted" href="#!">Forgot password?</a>
+									<a class="text-muted" routerLink="/checkemail">Forgot password?</a>
 								</div>
 							</div>
 							<button class="btn btn-primary"
