--- a/Angular/src/app/pages/account/verify-email/verify-email.component.html
+++ b/Angular/src/app/pages/account/verify-email/verify-email.component.html
@@ -5,13 +5,13 @@
 	<div class="content">
 			<h1 class="big-title">Verify your email address</h1>
 			<div class="message">
-				<p class="text">We mailed you an eigh-digit code to your  “email”
+				<p class="text">We mailed you an eigh-digit code to your “email”
 					Enter the code and your email below to confirm your email adress.</p>
 			</div>
 			<div class="form">
 				<form [formGroup]="verifyEmailForm" (ngSubmit)="onSubmit()">
-					
-					<mat-form-field class="d-block my-2" color="accent" appearance="outline" >
+
+					<mat-form-field class="field d-block my-2" color="accent" appearance="outline" >
 						<mat-label for="email">Email</mat-label>
 						<input matInput type="email"  id="email" formControlName="email" placeholder="Enter your email" >
                         <mat-error *ngIf="verifyEmailForm.get('email')?.hasError('required')">
@@ -21,7 +21,7 @@
                             Email is <strong>invalid</strong>
                         </mat-error>
 					</mat-form-field>
-					<mat-form-field class="d-block my-2" color="accent" appearance="outline">
+					<mat-form-field class=" field d-block my-2" color="accent" appearance="outline">
 						<mat-label for="code">Code</mat-label>
 						<input matInput type="text"  id="code" formControlName="code" placeholder="Enter your code">
                         <mat-error *ngIf="verifyEmailForm.get('code')?.hasError('required')">
