--- a/Angular/src/app/layout/navbar/navbar.component.html
+++ b/Angular/src/app/layout/navbar/navbar.component.html
@@ -6,12 +6,81 @@
 		</div>
 		<div class="separator"></div>
 		<mat-nav-list class="dashboard">
-			<a mat-list-item class="my-3" (click)="toggleActive('/')">
+
+
+		</mat-nav-list>
+		<mat-nav-list class="dashboard">
+			<a mat-list-item (click)="showSubmenu = !showSubmenu" class="my-3">
+
+				<div matLine class="item" [ngClass]="{'active': current === '/','open':isExpanded}" *ngIf="isExpanded || 
+					isShowing">
+					<mat-icon class="icon">grid_view</mat-icon>
+					<p *ngIf="isExpanded">
+						Dashboard </p>
+					<mat-icon class="menu-button" [ngClass]="{'rotated' : 
+						showSubmenu}" *ngIf="isExpanded || 
+						   isShowing">expand_more</mat-icon>
+				</div>
+
+
+
+			</a>
+			<div *ngIf="showSubmenu">
+				<a mat-list-item>
+
+					<div matLine class="item" [ngClass]="{'open':isExpanded}" *ngIf="isExpanded || 
+					isShowing">
+						<mat-icon class="icon"></mat-icon>
+						<p *ngIf="isExpanded">
+							Activity </p>
+
+					</div>
+
+
+
+				</a>
+				<a mat-list-item>
+
+					<div matLine class="item" [ngClass]="{'open':isExpanded}" *ngIf="isExpanded || 
+					isShowing">
+						<mat-icon class="icon"></mat-icon>
+						<p *ngIf="isExpanded">
+							Traffic </p>
+
+					</div>
+
+
+
+				</a>
+				<a mat-list-item>
+
+					<div matLine class="item" [ngClass]="{'open':isExpanded}" *ngIf="isExpanded || 
+					isShowing">
+						<mat-icon class="icon"></mat-icon>
+						<p *ngIf="isExpanded">
+							Statics </p>
+
+					</div>
+
+
+
+				</a>
+				<!-- <a menu-list-item>
+					Mangage users
+				</a> -->
+			</div>
+			<!-- <a mat-list-item class="my-3" (click)="toggleActive('/')">
+
 				<div matLine class="item" [ngClass]="{'active': current === '/','open':isExpanded}">
 					<mat-icon class="icon">grid_view</mat-icon>
-					<p *ngIf="isExpanded">Dashboard</p>
+					<p *ngIf="isExpanded">
+						Dashboard </p>
+
+
+					
 				</div>
-			</a>
+			</a> -->
+
 
 			<a mat-list-item class="my-3" (click)="toggleActive('/claims')">
 				<div matLine class="item" [ngClass]="{'active': current === '/claims','open':isExpanded}">
